==> Samsung/TizenRT/os/arch/arm/src/tiva/tiva_gpio.c <==
#include <tinyara/config.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <assert.h>
#include <debug.h>
#include <arch/irq.h>
#include "up_arch.h"
#include "tiva_enablepwr.h"
#include "tiva_enableclks.h"
#include "tiva_gpio.h"
#define AMSEL_SHIFT            6
#define AMSEL_1                (1 << AMSEL_SHIFT)	/* Set/clear bit in GPIO AMSEL register */
#define AMSEL_0                0
#define AMSEL_X                0
#define AFSEL_SHIFT            5
#define AFSEL_1                (1 << AFSEL_SHIFT)	/* Set/clear bit in GPIO AFSEL register */
#define AFSEL_0                0
#define AFSEL_X                0
#define DIR_SHIFT              4
#define DIR_1                  (1 << DIR_SHIFT)	/* Set/clear bit in GPIO DIR register */
#define DIR_0                  0
#define DIR_X                  0
#define ODR_SHIFT              3
#define ODR_1                  (1 << ODR_SHIFT)	/* Set/clear bit in GPIO ODR register */
#define ODR_0                  0
#define ODR_X                  0
#define DEN_SHIFT              2
#define DEN_1                  (1 << DEN_SHIFT)	/* Set/clear bit in GPIO DEN register */
#define DEN_0                  0
#define DEN_X                  0
#define PUR_SHIFT              1
#define PUR_1                  (1 << PUR_SHIFT)	/* Set/clear bit in GPIO PUR register */
#define PUR_0                  0
#define PUR_X                  0
#define PDR_SHIFT              0

int tiva_configgpio(uint32_t pinset)
{
	irqstate_t flags;
	unsigned int func;
	unsigned int port;
	unsigned int pinno;
	uintptr_t base;
	uint32_t pin;

	/* Decode the basics */

	func = (pinset & GPIO_FUNC_MASK) >> GPIO_FUNC_SHIFT;
	port = (pinset & GPIO_PORT_MASK) >> GPIO_PORT_SHIFT;
	pinno = (pinset & GPIO_PIN_MASK);
	pin = (1 << pinno);

	DEBUGASSERT(func <= GPIO_FUNC_MAX);

	/* Get the base address associated with the GPIO port */

	base = tiva_gpiobaseaddress(port);
	DEBUGASSERT(base != 0);

	/* The following requires exclusive access to the GPIO registers */

	flags = irqsave();

	/* Enable power and clocking for this GPIO peripheral.
	 *
	 * - Enable Power (TM4C129 family only):  Applies power (only) to the GPIO
	 *   peripheral.  This is not an essential step since enabling clocking
	 *   will also apply power.  The only significance is that the GPIO state
	 *   will be retained if the GPIO clocking is subsequently disabled.
	 * - Enable Clocking (All families):  Applies both power and clocking to
	 *   the GPIO peripheral, bringing it a fully functional state.
	 */

	tiva_gpio_enablepwr(port);
	tiva_gpio_enableclk(port);

	/* First, set the port to digital input.  This is the safest state in which
	 * to perform reconfiguration.
	 */

	tiva_gpiofunc(base, pinno, &g_funcbits[0]);
	tiva_portcontrol(base, pinno, pinset, &g_funcbits[0]);

	/* Then set up pad strengths and pull-ups.  These setups should be done before
	 * setting up the function because some function settings will over-ride these
	 * user options.
	 */

	tiva_gpiopadstrength(base, pin, pinset);
	tiva_gpiopadtype(base, pin, pinset);

	/* Then set up the real pin function */

	tiva_gpiofunc(base, pinno, &g_funcbits[func]);
	tiva_portcontrol(base, pinno, pinset, &g_funcbits[func]);

	/* Special case GPIO digital output pins */

	if (func == 1 || func == 3 || func == 5) {
		tiva_initoutput(pinset);
	}

	/* Special setup for interrupt GPIO pins */

	else if (func == 7) {
		tiva_interrupt(pinset);
	}

	irqrestore(flags);
	return OK;
}

void tiva_gpiowrite(uint32_t pinset, bool value)
{
	unsigned int port;
	unsigned int pinno;
	uintptr_t base;

	/* Decode the basics */

	port = (pinset & GPIO_PORT_MASK) >> GPIO_PORT_SHIFT;
	pinno = (pinset & GPIO_PIN_MASK);

	/* Get the base address associated with the GPIO port */

	base = tiva_gpiobaseaddress(port);

	/* "The GPIO DATA register is the data register. In software control mode,
	 *  values written in the GPIO DATA register are transferred onto the GPIO
	 *  port pins if the respective pins have been configured as outputs through
	 *  the GPIO Direction (GPIO DIR) register ...
	 *
	 * "In order to write to GPIO DATA, the corresponding bits in the mask,
	 *  resulting from the address bus bits [9:2], must be High. Otherwise, the
	 *  bit values remain unchanged by the write.
	 *
	 * "... All bits are cleared by a reset."
	 */

	putreg32((uint32_t) value << pinno, base + TIVA_GPIO_DATA_OFFSET + (1 << (pinno + 2)));
}

bool tiva_gpioread(uint32_t pinset)
{
	unsigned int port;
	unsigned int pinno;
	uintptr_t base;

	/* Decode the basics */

	port = (pinset & GPIO_PORT_MASK) >> GPIO_PORT_SHIFT;
	pinno = (pinset & GPIO_PIN_MASK);

	/* Get the base address associated with the GPIO port */

	base = tiva_gpiobaseaddress(port);

	/* "... the values read from this register are determined for each bit
	 *  by the mask bit derived from the address used to access the data register,
	 *  bits [9:2]. Bits that are 1 in the address mask cause the corresponding
	 *  bits in GPIODATA to be read, and bits that are 0 in the address mask cause
	 *  the corresponding bits in GPIO DATA to be read as 0, regardless of their
	 *  value.
	 *
	 * "A read from GPIO DATA returns the last bit value written if the respective
	 *  pins are configured as outputs, or it returns the value on the
	 *  corresponding input pin when these are configured as inputs. All bits
	 *  are cleared by a reset."
	 */
	return (getreg32(base + TIVA_GPIO_DATA_OFFSET + (1 << (pinno + 2))) != 0);
}
